Pom updated: neo4j version changed into 3.1.1. Plugin workflow updated.